k8s/postgres-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
       component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
              claimName: db-pvc
      containers:
          - name: postgres
            image: postgres
            ports:
              - containerPort: 5432
            volumeMounts:
              - mountPath: /var/lib/postgresql/data
                subPath: postgres
                name: postgres-storage
