k8s/server-service.yaml

apiVersion: v1 
kind: Service
metadata: 
  name: server-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
